# chronos

./: CMakeLists.txt  LICENSE  README.md
.aiassistant/rules/: AI Coding Rules.md  AI Readme Rules.md
examples/: chronometer_example.cpp  chronotimer_example.cpp  example.cpp
include/: chronometer.h  chronometer_manager.h  chronotimer.h  threadpool.h
src/: chronometer.cpp  chronometer_manager.cpp  chronotimer.cpp  threadpool.cpp
